# beaumont

./: .gitignore  Cargo.toml  README.md  build.sh  katex.html
beaumont/: Cargo.toml
beaumont/src/: lib.rs
linear-algebra/: Cargo.toml
linear-algebra/src/: lib.rs  matrices.rs  vectors.rs
linear-algebra/src/matrices/: from.rs  ops.rs
linear-algebra/src/matrices/ops/: idx.rs
linear-algebra/src/vectors/: from.rs  iter.rs  ops.rs
linear-algebra/src/vectors/ops/: add.rs  dot.rs  eq.rs  idx.rs  neg.rs  scale.rs
macros/: Cargo.toml
macros/src/: decimals.rs  katex.rs  lib.rs  literals.rs  matrix.rs  vector.rs
macros/tests/: integration.rs  ui.rs
macros/tests/examples/: decimals1.expanded.rs  decimals1.rs  matrix1.expanded.rs  matrix1.rs  matrix2.rs  matrix2.stderr  matrix3.rs  matrix3.stderr  matrix4.rs  matrix4.stderr  matrix5.rs  matrix5.stderr  matrix6.rs  matrix6.stderr  vector1.expanded.rs  vector1.rs  vector2.rs  vector2.stderr  vector3.rs  vector3.stderr
macros/tests/ui/: literals.rs
numbers/: Cargo.toml
numbers/src/: display.rs  from.rs  lib.rs  ops.rs  scaling.rs
numbers/src/ops/: eq.rs  neg.rs
src/: lib.rs  num.rs
src/num/: display.rs  from.rs  scaling.rs
src/num/ops/: neg.rs
