[package]
name = "beaumont"
version = "0.1.1"
license = "WTFPL"
authors = [
    "Paolo Angioletti <paolo.angioletti@gmail.com>"
]
edition = "2024"
description = "Algorithmic trading for quantitative financial applications"
repository = "https://github.com/pangiole/beaumont"
keywords = [
    "trading",
    "finance",
    "quantitative",
    "algorithmic",
    "pricing"
]
categories = [
    "finance",
    "algorithms",
    "mathematics"
]
exclude = [
]

[dependencies]
beaumont-numbers = { version = "0.1.1", path = "../numbers" }
# TODO beaumont-linear = { version = "0.1.1", path = "../linear" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../katex.html" ]

