[package]
name = "beaumont"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [ ]


[dependencies]
beaumont-macros  = { version = "0.1.2", path = "../macros" }
beaumont-numbers = { version = "0.1.2", path = "../numbers" }
beaumont-linear-algebra = { version = "0.1.2", path = "../linear-algebra" }

