[package]
name = "beaumont-macros"
version = "0.1.1"
license = "WTFPL"
authors = [
    "Paolo Angioletti <paolo.angioletti@gmail.com>"
]
edition = "2024"
description = "Algorithmic trading for quantitative financial applications"
repository = "https://github.com/pangiole/beaumont"
keywords = [
    "trading",
    "finance",
    "quantitative",
    "algorithmic",
    "pricing"
]
categories = [
    "finance",
    "algorithms",
    "mathematics"
]
exclude = [

]

[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.103", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.109", default-features = false, features = ["parsing", "proc-macro"]  }

[dev-dependencies]
trybuild = "1.0.114"

