[package]
name = "beaumont-numbers"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [ ]


[dependencies]
beaumont-macros = { version = "0.1.3", path = "../macros" }


[package.metadata.docs.rs]
rustdoc-args = ["--no-deps"]